--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   firebase_crashlytics: ^3.4.9
   firebase_remote_config: ^4.3.8
   firebase_analytics: ^10.8.0
+  flutter_riverpod: ^2.4.10
 
 dev_dependencies:
   flutter_test:
